# Dirgagah-KAERTEI

./: .gitignore  ARENA_CONFIGURATION_GUIDE.md  CODEBASE_CLEANUP_PLAN.md  COMPETITION_GUIDE.md  FINAL_CLEANUP_SUMMARY.md  FINAL_STATUS.md  HARDWARE_SETUP.md  HARDWARE_UPDATE_SUMMARY.md  HARDWARE_UPDATE_SUMMARY_OLD.md  INSTALLATION.md  Justfile  MISSION_CLARIFICATION.md  OPTIMIZATION_SUMMARY.md  QA_COMPREHENSIVE_ANALYSIS_REPORT.md  README.md  README_NEW_SIMPLE.md  README_OLD.md  SETUP.md  SISTEM_12_CHECKPOINT_ANALYSIS.md  SISTEM_26_CHECKPOINT_ANALYSIS.md  TROUBLESHOOTING.md  VISION_SYSTEM_INTEGRATION_GUIDE.md  fix_numpy_version.sh  install_kaertei.sh  kaertei  node.md  note.md  setup_waypoints.sh  switch_arena_config.sh
kaertei_drone/: README.md  build_kaertei.sh  package.xml  quick_access.sh  run_kaertei.sh  setup.py  setup_kaertei.sh
kaertei_drone/config/: hardware_config.conf  setup.py
kaertei_drone/docs/: ONNX_MODEL_PLACEMENT.md  TROUBLESHOOTING.md
kaertei_drone/kaertei_drone/hardware/: camera_control_node.py  emergency_controller.py  gpio_control_node.py  hardware_config.py  hardware_config.py.bak  hardware_config_fixed.py  magnet_control.py
kaertei_drone/kaertei_drone/mission/: checkpoint_mission_mavros.py  emergency_handler.py  simple_3wp_config.py  simplified_mission_control.py
kaertei_drone/kaertei_drone/monitoring/: sensor_monitor.py  system_health_monitor.py  topic_adapters.py
kaertei_drone/kaertei_drone/navigation/: flight_state_monitor.py  gps_waypoint_monitor.py  kalibrasi_navigator.py  px4_waypoint_config.py  px4_waypoint_navigator.py  waypoint_config.py  waypoint_navigator.py  waypoint_selector.py
kaertei_drone/kaertei_drone/vision/: unified_vision_system.py  yolo_object_detector.py
kaertei_drone/launch/: kaertei_12checkpoint_system.launch.py  kaertei_pi5_system.launch.py  simple_3waypoint_system.launch.py
kaertei_drone/resource/: kaertei_drone
kaertei_drone/scripts/: competition_startup.sh  docker_runner.sh  install_kaertei.sh  run_simple_mission.sh  run_simplified_mission.sh  setup_ubuntu.sh  test_hardware_pi5.sh  validate_system.sh
kaertei_drone/src/: __init__.py  hardware_config.py  validate_ubuntu22.py
kaertei_drone/src/hardware/: emergency_controller.py  magnet_control.py  magnet_control_node.py
kaertei_drone/src/mission/: simple_3waypoint_mission.py  simplified_mission_control.py
kaertei_drone/src/monitoring/: sensor_monitor.py  system_health_monitor.py  topic_adapters.py
kaertei_drone/src/navigation/: flight_state_monitor.py  gps_monitor.py  gps_waypoint_monitor.py  kalibrasi_navigator.py  px4_waypoint_navigator.py  waypoint_navigator.py
kaertei_drone/src/vision/: unified_vision_system.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/drone_mvp/share/drone_mvp/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/geographic_msgs/share/geographic_msgs/: package.bash  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/: dummy.txt
ros2_ws/src/drone_mvp/: =0.14.1  =0.4.4  =4.6.0  CHECKPOINT_BREAKDOWN.md  CMakeLists.txt  CMakeLists_new.txt  CMakeLists_old.txt  COMPETITION_GUIDE.md  DELIVERY_SUMMARY.md  Dockerfile  Dockerfile.backup  Dockerfile.new  HARDWARE_SETUP.md  Justfile  Justfile.backup  Justfile_fixed  Justfile_new  Justfile_ubuntu  MULTI_DISTRO_GUIDE.md  README.md  README_INSTALLATION.md  README_UBUNTU.md  TROUBLESHOOTING.md  calibrate_hardware.py  competition_launch.sh  competition_quickstart.sh  competition_startup.sh  debug_v2.py  docker-compose.yml  docker-compose.yml.new  docker_runner.sh  doctor_ubuntu.py  drone_manager.sh  dummy_hardware.py  final_validation.sh  hexacopter_config.py  install_just.sh  install_kaertei.sh  just.sh  kaertei_master.sh  (+23 more)
ros2_ws/src/drone_mvp/config/: competition_config.yaml  hardware_config.conf  hexacopter_config.yaml  mavros_config.yaml  params.yaml
ros2_ws/src/drone_mvp/drone_mvp/: __init__.py  camera_control_node.py  checkpoint_mission_mavros.py  checkpoint_mission_node.py  dropzone_detector.py  exit_detector.py  flight_mode_switcher.py  gps_monitor.py  hardware_config.py  kalibrasi_navigator.py  lidar_control_node.py  magnet_control.py  mission_node.py  vision_detector_node.py  waypoint_controller.py
ros2_ws/src/drone_mvp/launch/: checkpoint_mission.launch.py  drone.launch.py  kaertei_pi5_system.launch.py
ros2_ws/src/drone_mvp/logs/: debug_v2_data_20250805_121551.json  debug_v2_data_20250805_122032.json  debug_v2_data_20250805_142857.json  debug_v2_report_20250805_121551.txt  debug_v2_report_20250805_122032.txt  debug_v2_report_20250805_142857.txt
ros2_ws/src/drone_mvp/msg/: SensorStatus.msg
ros2_ws/src/drone_mvp/resource/: drone_mvp
ros2_ws/src/drone_mvp/srv/: MagnetControl.srv
(+3 files in other folders)
