<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kaertei_drone</name>
  <version>2.0.0</version>
  <description>KAERTEI 2025 FAIO - Autonomous Drone System (Clean Structure)</description>

  <maintainer email="kaertei@example.com">KAERTEI Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>

  <!-- ROS2 Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- MAVROS Dependencies -->
  <depend>mavros</depend>
  <depend>mavros_msgs</depend>

  <!-- Computer Vision -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- System Dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
